--- a/second_page.css
+++ b/second_page.css
@@ -77,6 +77,7 @@ iframe {
 #results-container {
   width: 100%;
   max-width: 600px;
+  height: 1000px;
   text-align: center;
   margin-top: 20px;
 }
