--- a/second_page.css
+++ b/second_page.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #212121;
   color: #333;
 }
 
@@ -20,7 +20,11 @@ body {
 h1 {
   color: #1db954;
   margin: 0;
-  padding: 0;
+  padding-left: 145px;
+}
+
+h2{
+  color: white;
 }
 
 /* Logout button style */
